# rokolisp

./: LICENSE  README.md  default.nix  rokolisp.cabal
Prelude/: demo.rkl  package.rkl
app/: Main.hs
benchmark/: Main.hs
src/: RokoLisp.hs
src/RokoLisp/: Eval.hs  Runtime.hs  Syntax.hs
test/: Spec.hs
test/code/: fact.rkl  fact.rl  hello-world.rkl
