cabal-version:       2.4
name:                rokolisp
version:             0.0.0.0
synopsis:            See README for more info
description:         See README for more info
license:             BSD-3-Clause
license-file:        LICENSE
author:              Tristan de Cacqueray
maintainer:          Tristan de Cacqueray <tdecacqu@redhat.com>
copyright:           2021 Tristan de Cacqueray
category:            Compilers/Interpreters
build-type:          Simple
extra-doc-files:     README.md
tested-with:         GHC == 8.10.2

common common-options
  build-depends:       base >= 4.13.0.0
                     , relude

  mixins:              base hiding (Prelude)
                     , relude (Relude as Prelude)

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     RokoLisp

executable rokolisp
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       rokolisp
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite rokolisp-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       rokolisp
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

benchmark rokolisp-benchmark
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  build-depends:       gauge
                     , rokolisp
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
