cabal-version:       2.4
name:                rokolisp
version:             0.1.0.0
synopsis:            See README for more info
description:         See README for more info
license:             BSD-3-Clause
license-file:        LICENSE
author:              Tristan de Cacqueray
maintainer:          Tristan de Cacqueray <tdecacqu@redhat.com>
copyright:           2021 Tristan de Cacqueray
category:            Compilers/Interpreters
build-type:          Simple
extra-doc-files:     README.md
tested-with:         GHC == 8.10.3

common common-options
  build-depends:       relude

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

  -- From ghc2021 proposal
  default-language:    Haskell2010
  default-extensions:  BangPatterns,
                       BinaryLiterals,
                       DataKinds,
                       DeriveGeneric,
                       DerivingStrategies,
                       ExplicitForAll,
                       FlexibleInstances,
                       GeneralizedNewtypeDeriving,
                       HexFloatLiterals,
                       ImportQualifiedPost,
                       LambdaCase,
                       MultiWayIf,
                       NamedFieldPuns,
                       NamedWildCards,
                       NoImplicitPrelude,
                       NumDecimals,
                       NumericUnderscores,
                       OverloadedLists,
                       OverloadedStrings,
                       PostfixOperators,
                       RecordWildCards,
                       ScopedTypeVariables,
                       StandaloneDeriving,
                       TupleSections,
                       TypeOperators

library
  import:              common-options
  build-depends:       containers
                     , base
                     , filepath
                     , parsec
                     , relude
                     , text

  hs-source-dirs:      src
  exposed-modules:     RokoLisp,
                       RokoLisp.Syntax
                       RokoLisp.Eval
                       RokoLisp.Runtime


executable rokolisp
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Paths_rokolisp
  build-depends:       rokolisp
                     , base
                     , gitrev
                     , optparse-generic
                     , repline
                     , text
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite rokolisp-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       QuickCheck,
                       rokolisp,
                       doctest,
                       hspec
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

benchmark rokolisp-benchmark
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  build-depends:       rokolisp,
                       gauge,
                       random,
                       text
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
